--- a/styles/style.css
+++ b/styles/style.css
@@ -23,100 +23,190 @@ a{ text-decoration: none; }
 /*--------- index.html ---------*/
 
 .bloque_superior{
-    display: block;
     border-top: solid 4px black;
     border-bottom: solid 10px black;
-    height: 15vh;
+    min-height: 10rem;
     /*background-color:cornflowerblue;*/
-    position: relative;
 }
 
 .bs_izq{
-    display: inline-block;
-    text-align: center;
-    width: 40%;
-    height: 100%;
-    /*background-color: blue;*/
 
-    position: absolute;
-    top: 0%;
-    left: 0%;
 }
 
 .bs_cen{
-    display: inline-block;
     border-left: solid 3px black;
-    border-right: solid 3px black;
-    width: 10%;
-    height: 100%;
-    /*background-color: chartreuse;*/
-
-    position: absolute;
-    top: 0%;
-    left: 40%;
+    border-right: solid 3px black;  
 }
 
-.bs_der{
-    display: inline-block;
-    width: 50%;
-    height: 100%;
-    /*background-color: blueviolet;*/
-
-    position: absolute;
-    top: 0%;
-    left: 50%;
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-nav{
-    display: inline-block;
-    width: 70%;
-    height: 100%;
-    /*background-color: aqua;*/
-    position: relative;
-}
-ul {
+nav ul{
+    display: flex;
+    flex-direction: row;
     list-style: none;
-    font-size: 0;
-    position: absolute;
-    top: 42%;
-    right: 18%;
+    padding: 0;
+    margin: 0;
 }
-li {
-    display: inline-block;
-    position: relative;
-    width: auto;
-    font-size: 1.5rem;
-    font-weight: 400;
-    text-transform: uppercase;
+nav ul li a{
+    display: block;
+    padding: 1rem 1.5rem;
     color: black;
-    padding: 0 15px;
- }
- li a:hover{
-    color: #C46241;
- }
-
- .btn_contact{
-    display: inline-block;
-    vertical-align: top;
-    background-color: #C46241;
-    width: 29.7%;
-    height: 100%;
-    position: relative;
- }
-
- .btn_contact a{
-    font-weight: 400;
-    color: #EEEEEE;
+    font-size: 1.3em;
     text-transform: uppercase;
-    position: absolute;
-    top: 35%;
-    left: 25%;
-    font-size: 2.1em;
-    background: none;
- }
- .btn_contact a:hover{
+    overflow: hidden;
     font-weight: 500;
- }
+    text-decoration: none;
+}
+nav > ul > li {
+    margin: 0 0.5rem;
+    overflow: hidden;
+  }
+nav ul li a:hover{
+    display: block;
+    position: relative;
+    font-weight: 600;
+    color: black;
+}
+nav ul li a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.2em;
+    background-color: black;
+    transition: opacity 300ms, transform 300ms;
+    opacity: 1;
+    transform: translate3d(-100%, 0, 0);
+}
+nav ul li a:hover::after,
+nav ul li a:focus::after{
+    transform: translate3d(0, 0, 0);
+}
+
+.bt_contacto {
+    background-color: #C46241;
+    border-left: solid 3px black;
+    align-items: center;
+    justify-content: center;
+}
+.bt_contacto a{
+    background: none;
+    color: #EEEEEE;
+    font-weight: 400;
+    font-size: 2.1rem;
+    text-transform: uppercase;
+    text-decoration: none; 
+}
+.bt_contacto a:hover{
+    color: #EEEEEE;
+}
+.bt_contacto:hover{
+    background-color: #d27252;
+}
+
+/* inicio navbar burger*/
+
+.menu-button-container {
+    display: none;
+    height: 100%;
+    width: 30px;
+    margin-right: 20px;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: none;
+  }
+  
+  #menu-toggle {
+    display: none;
+  }
+  
+  .menu-button,
+  .menu-button::before,
+  .menu-button::after {
+    display: block;
+    background-color: black;
+    position: absolute;
+    height: 4px;
+    width: 30px;
+    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    border-radius: 2px;
+  }
+  
+  .menu-button::before {
+    content: '';
+    margin-top: -8px;
+  }
+  
+  .menu-button::after {
+    content: '';
+    margin-top: 8px;
+  }
+  
+  #menu-toggle:checked + .menu-button-container .menu-button::before {
+    margin-top: 0px;
+    transform: rotate(405deg);
+  }
+  
+  #menu-toggle:checked + .menu-button-container .menu-button {
+    background: rgba(255, 255, 255, 0);
+  }
+  
+  #menu-toggle:checked + .menu-button-container .menu-button::after {
+    margin-top: 0px;
+    transform: rotate(-405deg);
+  }
+  
+  @media (max-width: 992px) {
+    .menu-button-container {
+      display: flex;
+    }
+    nav ul {
+        z-index: 2;
+        position: absolute;
+        top: 10rem;
+        margin-top: 0px;
+        left: 0;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    #menu-toggle ~ ul li {
+      height: 0;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+      background: none;
+    }
+    #menu-toggle:checked ~ ul li {
+      height: 5rem;
+      padding: 0.5em;
+      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+      background: none;
+    }
+    ul li {
+      display: flex;
+      justify-content: center;
+      margin: 0;
+      padding: 0.5em 0;
+      width: 100%;
+      color: white;
+      background-color: #d6d6d6;
+    }
+    nav ul li a::after {
+        display: none;
+    }
+  }
+
+/* fin navbar burger*/
 
 .bloque_central{
     display: block;
@@ -508,4 +598,5 @@ sup{
 }
 
 /*--------- work.html ---------*/
-
+  
+  
