--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,6 @@ nav ul li a:focus::after{
     display: none;
     height: 100%;
     width: 30px;
-    margin-right: 20px;
     cursor: pointer;
     flex-direction: column;
     justify-content: center;
@@ -169,9 +168,17 @@ nav ul li a:focus::after{
     transform: rotate(-405deg);
   }
   
-  @media (max-width: 992px) {
+  @media (max-width: 991px) {
+    .bs_cen{
+        background-color: #C46241;
+    }
+    nav{
+        justify-content: flex-end;
+        padding-right: 6.5rem !important;
+        
+    }
     .menu-button-container {
-      display: flex;
+        display: flex;
     }
     nav ul {
         z-index: 2;
@@ -218,8 +225,6 @@ nav ul li a:focus::after{
 .bloque_central{
     border-bottom: solid 10px black;
     min-height: calc(100vh - 10rem);
-    background-color:yellow;
-
 }
 
 .bc_sup{
@@ -242,41 +247,63 @@ nav ul li a:focus::after{
 }
 
 .bc_ppal{
-    padding-right: 7rem !important;
+    padding-right: 6.5rem !important;
 }
 
 .home_tit{
     font-family: 'Barlow', sans-serif;
     line-height: 1em;
-    font-size: 7em;
+    font-size: calc(2.8rem + 3.3vw);
     font-weight: 800;
     text-transform: uppercase;
     text-align: end;
     padding: 8rem 0;
 }
-.home_tit > p > span{
+
+.home_tit_front{
     font-size: 0.3em; 
-    font-weight: 600;    
+    font-weight: 600;  
+      
 }
 
 .home_com{
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 1.7rem;
+    font-size: calc(1.7rem + 0.1vw);
     text-align: end;
+}
+
+.home_tit_com{
+    padding-bottom: 6rem;
 }
 
 .link_about{
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    font-size: 1.4em;
+    font-size: 1.4rem;
     color: #C46241;
-    padding-top: 8rem;
+    padding: 0.1rem 0;
+    text-align: center;
+    text-transform: uppercase;
+    display: block;
+    position: relative;
     text-decoration: none;
 }
 .link_about:hover{
     font-weight: 700;
     color: #C46241;
+}
+
+.link_about::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;    
+    width: 100%;
+    height: 0.2em;
+    background-color:#C46241;
+    opacity: 1;
 }
 
 /*--------- about.html ---------*/
