--- a/styles/style.css
+++ b/styles/style.css
@@ -253,7 +253,8 @@ nav ul li a:focus::after{
 .home_tit{
     font-family: 'Barlow', sans-serif;
     line-height: 1em;
-    font-size: calc(2.8rem + 3.3vw);
+    /*font-size: calc(2.8rem + 3.3vw);*/
+    font-size: 7rem;
     font-weight: 800;
     text-transform: uppercase;
     text-align: end;
@@ -263,6 +264,7 @@ nav ul li a:focus::after{
 .home_tit_front{
     font-size: 0.3em; 
     font-weight: 600;  
+    line-height: 4.2rem;
       
 }
 
@@ -270,7 +272,7 @@ nav ul li a:focus::after{
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 1.7rem;
-    font-size: calc(1.7rem + 0.1vw);
+    font-size: 1.7rem;
     text-align: end;
 }
 
@@ -308,86 +310,40 @@ nav ul li a:focus::after{
 
 /*--------- about.html ---------*/
 
-.bs_izq_ac{
-    display: inline-block;
-    border-right: solid 6px black;
-    width: 8%;
-    height: 100%;
+.bc_col{
+    border-right: solid 4px black;
+}
+
+.bs_verde{
     background-color: #377581;
-
-    position: absolute;
-    top: 0%;
-    left: 0%;
+    border-right: solid 3px black;
 }
 
-.bs_cen_ac{
-    display: inline-block;
-    border-right: solid 6px black;
-    width: 20%;
-    height: 100%;
-
-    position: absolute;
-    top: 0%;
-    left: 8%;
+.bc_about_sup{
+    min-height: calc(100vh - 10rem);
+    border-bottom: solid 10px black;
+    background-color: aqua;
 }
 
-.bc_izq_ac{
-    display: inline-block;
-    border-left: solid 3px black;
-    width: 35%;
-    height: 100%;
-
-    position: absolute;
-    top: 0%;
-    left: 3%;
+.b_titulo_ab{
+    font-size: 4rem;
+    font-weight: 600;
 }
 
-.bc_foto_about{
-    display: block;
-    border-bottom: solid 3px black;
-    width: 100%;
-    height: 90%; 
-    background-color: black;
-}
-
-.bc_foto_about img{
-    width:auto;
-    height:100%;
-}
-
-.bc_der_ac{
-    display: inline-block;
-    border-left: solid 10px black;
-    width: 75%;
-    height: 100%;
-
-    position: absolute;
-    top: 0%;
-    left: 34.3%;
-}
-
-.bcd_int_cen{
-    display: block;
+.b_cent_ab{
     border-top: solid 3px black;
     border-bottom: solid 3px black;
-    width: 100%;
-    height: 78.9%;
-    margin-top: 5%;
+    min-height: 75%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
 }
 
-.bcd_int_inf{
-    display: block;
-    border-left: solid 3px black;
-    border-right: solid 3px black;
-    width: 40%;
-    height: 10%;
+.rect_n{
     background-color: #C46241;
-
-    position: absolute;
-    top: 90%;
-    left: 4%;
+    border-left: solid 3px black;
+    border-right: solid 4px black;
+    width: 100%;
 }
-
 
 /*--------- contact.html ---------*/
 
